k8s/learn-lab/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learn-api
  namespace: learn-k8s
spec:
  type: NodePort
  selector:
    app: learn-api
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
