k8s/learn-lab/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learn-api
  namespace: learn-k8s
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - be.emiu.site
      secretName: learn-api-tls
  rules:
    - host: be.emiu.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: learn-api
                port:
                  number: 80
